8297264: C2: Cast node is not processed again in CCP and keeps a wrong too narrow type which is later replaced by top

Reviewed-by: rrich
Backport-of: a57392390b0abe5db496775efcc369bafdf420f1